@@ -6,6 +6,10 @@ import com.inomera.telco.commons.springkafka.util.HostUtils;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
+/**
+ * @author Serdar Kuzucu
+ * @author Turgay Can
+ */
 public class PollerThreadStore implements ConsumerThreadStore {
     private static final Map<Long, PollerThreadState> THREAD_STORE_SET = new ConcurrentHashMap<>();
 
@@ -13,7 +17,7 @@ public class PollerThreadStore implements ConsumerThreadStore {
     public void put(ConsumerPoller consumerPoller, Thread thread) {
         final String hostname = HostUtils.getHostname();
         final String hostedThreadName = hostname.concat("-").concat(thread.getName());
-        final long threadId = thread.getId();
+        final long threadId = thread.threadId();
 
         final PollerThreadState pollerThreadState = new PollerThreadState();
         pollerThreadState.setThreadId(threadId);
